add markets to defn.

--- a/text/intro.tex
+++ b/text/intro.tex
@@ -32,7 +32,7 @@ ESPs.
 A mutual understanding of concerns between SCs and ESPs can 
 produce a symbiotic relationship that goes beyond the current producer-consumer 
 paradigm, paving the way for possible integration of %HPC TP: replace HPC with SCs
-SCs with the electrical grid. Grid Integration in the context of this study refers to the dynamic interaction and value between the demand-side resources (SCs) and the supply-side resources (ESPs).
+SCs with the electrical grid. Grid Integration in the context of this study refers to the dynamic interaction and value between the demand-side resources (SCs) and the supply-side resources (ESPs) and the electricity grid and its markets.
 
 The Energy Efficient HPC Working Group (\href {http://eehpcwg.lbl.gov/}{EE HPC WG})  
 investigates opportunities for large supercomputing sites to  
