Cite Sridutt's paper.

--- a/bib/patki.bib
+++ b/bib/patki.bib
@@ -5078,3 +5078,11 @@ YEAR = 2012
 	url={{ http://drrc.lbl.gov/projects/dc}}
 	}
 	
+@inproceedings{porterfield2013power,
+  title={Power Measurement and Concurrency Throttling for Energy Reduction in OpenMP Programs},
+  author={Porterfield, Allan K and Olivier, Stephen L and Bhalachandra, Sridutt and Prins, Jan F},
+  booktitle={Parallel and Distributed Processing Symposium Workshops \& PhD Forum (IPDPSW), 2013 IEEE 27th International},
+  pages={884--891},
+  year={2013},
+  organization={IEEE}
+}
