--- a/text/priorwork.tex
+++ b/text/priorwork.tex
@@ -20,7 +20,7 @@ techniques were also applied to non-MPI datacenter workloads~\cite{femal:04}.
 Other power saving approaches were attempted that did not use DVFS, but most
 were not deemed relevant to the supercomputing environment. A notable exception
 is Dynamic Concurrency Throttling, where energy savings are realized by varying
-the number of threads at runtime~\cite{Curtis1,Curtis2,Curtis3}.
+the number of threads at runtime~\cite{Curtis1,Curtis2,Curtis3,porterfield2013power}.
 
 The research landscape changed considerably with the introduction of Intel's
 Sandy Bridge processor. Turbo mode allowed higher clock frequencies to be
