Add day-ahead and day-of

--- a/text/ESPintegration.tex
+++ b/text/ESPintegration.tex
@@ -34,7 +34,9 @@ the ESPs can offer to their consumers in order to balance demand with supply.
 Although critical to ESPs, methods are generally not visible to the consumer of the electricity because they
 operate within the generation or transmission stations. These methods are the major means by which supply and demand of electricity are managed.
 
-ESP programs encourage customer responses to target both energy efficiency and real-time management of demand for electricity. An example of an ESP program 
+ESP programs encourage customer responses to target both energy efficiency and real-time management of demand for electricity. Real-time programs can be \emph{day-ahead} or \emph{day-of}. Day-ahead programs refer to timescales of notification and responses from the customer that are determined based on advanced forecasting and capacity planning (for example, day-ahead 24-hour wholesale electricity prices). The programs are day-of are the ones when the notification and responses are based on same-day capacity planning or emergency response. 
+
+An example of an ESP program 
 that encourages energy efficiency would be to provide home consumers a financial incentive for replacing 
 single pane windows with double pane windows. On the other hand, an example that illustrates programs that help 
 with real-time demand management would be to provide a financial incentive for reducing load 
