--- a/text/intro.tex
+++ b/text/intro.tex
@@ -55,7 +55,7 @@ new market opportunities \cite{Ghatikar2012a, Ghatikar2012b}.
 % Now a reference. TP. \footnote{LBNL Data Center Grid Integration Activities: http://drrc.lbl.gov/projects/dc}.
 This integration model describes programs that are used by some of the ESPs %electricity service providers 
 to encourage particular responses by their customers and methods 
-used to balance the electrical grid supply and demand. This is referred to as \emph{demand response}.
+used to balance the electrical grid supply and demand. This is referred to as \emph{demand response (DR)}.
  %TP: This defines demand response, I'm clarifying this here.
 %Perhaps TP: No "perhaps".
 One of the most straightforward ways that SCs can begin
