--- a/text/priorwork.tex
+++ b/text/priorwork.tex
@@ -109,7 +109,8 @@ power capping (based on a power estimation method such as RAPL or direct power
 sensing) and a power throttling mechanism. Such a system works well when is a
 set of jobs with loose service level guarantees or low priority that can be
 forced to reduce consumption when the datacenter is approaching the power cap
-value. Etinski et al. \cite{Etinski1,Etinski2,Etinski3,Etinski4} explored
+value. 
+Etinski et al. \cite{Etinski1,Etinski2,Etinski3,Etinski4} explored
 scheduling under a power budget in supercomputing and analyzed bounded slowdown
 of jobs. In their series of papers, they introduced three policies. Their first
 policy is based looks at current system utilization and uses DVFS during job
