Updated the intro.tex file to include "teaser results" that are driven by the responses to the questionnaire.  This gives the reader some pre-knowledge of what the paper is going to say in the following sections.

--- a/text/intro.tex
+++ b/text/intro.tex
@@ -42,8 +42,20 @@ cooperate with their ESPs, their expectations from their ESPs, and the feasible 
 that SCs could employ to help their ESPs.
 To achieve our objectives we developed a questionnaire and distributed it to 
 the Top100 SCs in the United States. 
-%NEED TEASER RESULTS HERE!
-%Indicate results of questionnaire here.
+Eleven sites responded to this questionnaire.  Based on these responses, we noted a few
+primary observations:
+\begin{itemize}
+\item Only 20\% SCs currently communicate with their ESPs about Demand Response issues.
+\item SC managers believe that the candidate solutions most likely to be effective for
+responding to ESP requests involve coarse-grained power management techniques, job
+scheduling techniques, and shutting down computing resources.
+\item A stronger relationship, including Demand Response capabilities, between SCs and
+ESPs could likely lead to both energy savings and cost savings over time, and in some
+cases such capabilities might become a requirement for large SCs located in energy-challenged
+locations.
+\end{itemize}
+Section~\ref{sec:questionnaire} provides an in-depth analysis of the responses to the
+questionnaire from which these conclusions were drawn.
 
 This paper %TP replace 'work' with 'paper' 
 leverages prior work on datacenter and grid integration opportunities
