--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -17,6 +17,7 @@ The Electrical Grid and Supercomputing Centers:\\
 An Investigative Analysis of Emerging Opportunities and Challenges
 }
 
+\numberofauthors{12}
 \author{Natalie Bates$^1$, Girish Ghatikar$^2$,
   Ghaleb Abdulla$^3$, Gregory A. Koenig$^4$, Sridutt Bhalachandra$^5$, \\
 	Mehdi Sheikhalishashi$^6$, Tapasya Patki$^7$, Barry Rountree$^3$, Stephen Poole$^4$
@@ -29,6 +30,14 @@ An Investigative Analysis of Emerging Opportunities and Challenges
 			$^6$University of Calabria\\
 			$^7$University of Arizona
 	}
+
+\additionalauthors {
+\label{sec:additional}
+ \noindent
+ Fname Lname, Affiliation\\
+ Fname Lname, Affiliation\\
+ Fname Lname, Affiliation
+}
 
 \maketitle              % typeset the title of the contribution
 
@@ -61,11 +70,9 @@ An Investigative Analysis of Emerging Opportunities and Challenges
 \input{opportunities}
 \label{sec:opportunities}
 
-
 \section{Conclusions and Next Steps}
 \input{conclusion}
 \label{sec:conclusion}
-
 
 %
 % ---- Bibliography ----
