--- a/text/questionnaire.tex
+++ b/text/questionnaire.tex
@@ -257,6 +257,7 @@ tape storage read/write errors and compromising dew point requirements where liq
 Distinguishing interest from impact sheds further insight; some strategies are 
 considered high impact, but not interesting enough to consider deployment. Facility
 shutdown is rated as having a high impact, but only
-considered interesting by 36\% of the respondents. NOAA commented that, ``We've had too many instability and equipment failures to utilize this as a strategy." This divide is even more
+considered interesting by 36\% of the respondents. NOAA commented that, ``We've had too many HPC
+instability and equipment failures to utilize this as a strategy." This divide is even more
 apparent with load migration. It is rated as having a high impact by 36\% of the
 respondents, but only interesting to 10\%. 
