Ayse's citations and text added.

--- a/bib/patki.bib
+++ b/bib/patki.bib
@@ -5086,3 +5086,27 @@ YEAR = 2012
   year={2013},
   organization={IEEE}
 }
+
+
+@inproceedings{chen2014aspdac,   
+title={The Data Center as a Grid Load Stabilizer},   
+author={Chen, Hao and Caramanis, Michael C and Coskun, Ayse K},   
+booktitle={Design Automation Conference (ASP-DAC), 2014 19th Asia and South Pacific}, 
+pages={105--112},   year={2014},   organization={IEEE} }
+
+@inproceedings{liu2012renewable,   
+title={Renewable and cooling aware workload management for sustainable data centers},   
+author={Liu, Zhenhua and Chen, Yuan and Bash, Cullen and Wierman, Adam and Gmach, Daniel and Wang, Zhikui and Marwah, Manish and Hyser, Chris},   
+booktitle={ACM SIGMETRICS Performance Evaluation Review},   
+volume={40},   number={1},   pages={175--186},   year={2012},   organization={ACM} } 
+
+ @inproceedings{aikema2012data,   
+title={Data centres in the ancillary services market},   
+author={Aikema, David and Simmonds, Rob and Zareipour, Hamidreza},   booktitle={Green Computing Conference (IGCC), 2012 International},   pages={1--10},   year={2012},  
+ organization={IEEE} }
+
+@inproceedings{ghamkhari2012data,   
+title={Data centers to offer ancillary services},   
+author={Ghamkhari, Mahdi and Mohsenian-Rad, Hamed},   
+booktitle={Smart Grid Communications (SmartGridComm), 2012 IEEE Third International Conference on},  
+ pages={436--441},   year={2012},   organization={IEEE} }
