--- a/text/priorwork.tex
+++ b/text/priorwork.tex
@@ -141,7 +141,7 @@ applied cases for distributed datacenters. The results show that load migration
 is possible in both homogenous and heterogeneous systems. Their migration
 strategies were based on a manual process and can benefit from automation.
 
-\subsubsection{Dynamic Pricing}
+\subsubsection{Datacenter Participation in Smart Grid \\Programs}
 Aikema et. al \cite{aikema_electrical_2011} explored the potential for HPC
 centers to adapt to dynamic electrical prices, to variation in carbon intensity
 within an electrical grid, and to availability of local renewables. Their
@@ -159,3 +159,9 @@ job start times. Experiments on an IBM Blue Gene/P and a cluster system as well
 as a case study on Argonne's 48-rack IBM Blue Gene/Q system have demonstrated
 the effectiveness of this scheduling approach. Preliminary results show a 23\%
 reduction in the cost of electricity for HPC systems.
+
+Chen et al.~\cite{chen2014aspdac} studied the potential of datacenter participation in the demand side regulation services. They proposed a dynamic control policy that modulates the datacenter power consumption in response to independent service operator (ISO) requests by leveraging server power capping techniques and various server power states. Results show that datacenters can decrease their energy costs around 50\% by providing regulation service reserves, without a major deterioration in quality of service.
+
+Liu et al.~\cite{liu2012renewable} introduced a way to reduce cost and environmental impacts using a holistic approach that integrates energy and cooling supply control with IT workload planning to improve the overall attainability of datacenter operations. The results demonstrated a reduction of the recurring power costs and the use of non-renewable energy by as much as 60\% compared to existing techniques, while still meeting Service Level Agreements.
+
+Aikema et al.~\cite{aikema2012data} also analyzed a number of different potential advanced power markets for datacenters to participate in, and showed energy cost reduction by up to 12\% with only a small impact on the quality of service provided to users. Ghamkhari et al.~\cite{ghamkhari2012data} built an analytical profit model to show that datacenters can noticeably increase their profit by participating in voluntary load reduction to offer ancillary services, and help the grid achieve better service quality and reliability. 
