Add additional authors.

--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -17,7 +17,7 @@ The Electrical Grid and Supercomputing Centers:\\
 An Investigative Analysis of Emerging Opportunities and Challenges
 }
 
-\numberofauthors{12}
+\numberofauthors{16}
 \author{Natalie Bates$^1$, Girish Ghatikar$^2$,
   Ghaleb Abdulla$^3$, Gregory A. Koenig$^4$, Sridutt Bhalachandra$^5$, \\
 	Mehdi Sheikhalishashi$^6$, Tapasya Patki$^7$, Barry Rountree$^3$, Stephen Poole$^4$
@@ -34,9 +34,13 @@ An Investigative Analysis of Emerging Opportunities and Challenges
 \additionalauthors {
 \label{sec:additional}
  \noindent
- Fname Lname, Affiliation\\
- Fname Lname, Affiliation\\
- Fname Lname, Affiliation
+Lou Ahlen, Purdue University \\
+Anna Maria Bailey, LLNL\\
+Bob Conroy, OSIsoft\\
+Ayse K. Coskun, Boston University\\
+Thomas E. Durbin, NCSA\\
+Jim Rogers, ORNL\\
+Darren Smith, NOAA
 }
 
 \maketitle              % typeset the title of the contribution
