Change conclusion to not end in a question.

--- a/text/conclusion.tex
+++ b/text/conclusion.tex
@@ -7,7 +7,7 @@ source of electricity.
 ESPs are interested in partnering with customers,
 like SCs, to create a more dynamic and resilient grid
 by obtaining predictable demand forecasts and engaging in programs like 
-demand response.
+DR.
 
 We focused our attention on the largest SCs in the United States. The two SCs with the largest electricity demand, ORNL and LLNL, have had very different experiences. 
 ORNL's experience is that its electricity demand and fluctuations are not significant factors for their 
@@ -30,7 +30,7 @@ leverage for responding to requests from ESPs.
 Nonetheless, the business case for the grid integration of SCs remains to be demonstrated. 
 SCs have concerns that deploying these strategies might have an adverse impact on 
 their primary mission. One of the key enablers for SCs to participate in 
-electricity markets (for example, demand response, electricity prices) is having markets that value their 
+electricity markets (for example, DR, electricity prices) is having markets that value their 
 participation. In other areas like commercial buildings and select industrial facilities, benefits to 
 both ESPs and customers are well documented. However, as the electrical grid 
 and new dynamic loads such as SCs evolve, the markets need mechanisms to identify 
@@ -50,6 +50,6 @@ challenging with respect to grid integration.
 
 With increasing variable renewable generation and price-based DR programs, the intra-hour fluctuations 
 and demand forecasting are becoming increasingly important.
-Electrical grid programs may react in different ways to the timescale of a SC's load response.
-What are the trends 
-in inter-hour fluctuation patterns? Is this a new behavior, an interim one, or one that is likely to get worse?
+Electrical grid programs may react in different ways to the timescale of a SC's load response. The trends in intra-hour fluctuation patterns need to be studied and analyzed further.
+%What are the trends 
+%in inter-hour fluctuation patterns? Is this a new behavior, an interim one, or one that is %likely to get worse?
