--- a/text/questionnaire.tex
+++ b/text/questionnaire.tex
@@ -1,6 +1,6 @@
 We used a questionnaire to understand the current experiences of interaction between
 SCs and their ESPs. We restricted the analysis to sites in the United States
-because the results of the survey and practices of demand response are highly
+because the results of the survey and practices of DR are are highly
 correlated and driven by energy policies in the country. 
 \cite{torriti_demand_2010}.
 
