--- a/text/intro.tex
+++ b/text/intro.tex
@@ -1,11 +1,11 @@
 Supercomputing centers (SCs) with petascale\footnote{Petascale computing refers to computing systems capable of at
-least \(10^{15}\) floating point instructions per second (FLOPS).} 
+least \(10^{15}\) operations or floating point instructions per second (FLOPS).} 
 systems for high-performance computing (HPC) can have an outsized 
 impact on their Electricity Service Providers (ESPs), with peak 
 power demands %replace 'in excess of' with exceeding
 exceeding 20 MW and instantaneous power fluctuations of up to 8 MW. 
 As the HPC community moves towards exascale computing\footnote{Exascale computing refers to computing systems capable of at
-least \(10^{18}\)FLOPS.}, we anticipate that a growing number of facilities will
+least \(10^{18}\) operations or FLOPS.}, we anticipate that a growing number of facilities will
 be reaching or exceeding these service levels, with significant potential 
 effect on electrical grid reliability.
 In this paper we seek to understand how these anticipated
@@ -77,7 +77,7 @@ locations.
 
 One of the most straightforward ways that SCs can begin
 the process of engaging %replace participating with engaging, as participating is used twice in the sentence
-in DR is by participating in efforts to
+in integration is by participating in efforts to
 develop software 
 infrastructure to manage their electricity requirements in a tightly coupled manner 
 with their ESPs, facilitating both energy efficiency and grid reliability. In addition, this will provide for extensive funding and cost analysis and help the community base future requirements for SCs and ESPs on facts and a proven set of measurements.
