Sec 3. Move content around to bring to 13 pages.

--- a/text/questionnaire.tex
+++ b/text/questionnaire.tex
@@ -214,17 +214,6 @@ apparent benefit of power capping, etc can easily be outweighed by lost producti
 
 Similarly, another comment by ORNL suggested that the rapid deployment of hardware features, like P-states,  may outpace the need for strategies like power aware job scheduling.
 
-We tried to evaluate if power management strategies will be considered
-relevant and effective for grid integration at some point in the future. Two
-questions were asked: is there interest in using the strategies and what
-impact did they think that the strategies would have? When combining
-interest and impact, the results showed that power capping, shutdown, and
-job scheduling were both potentially interesting and of high impact (see Table 2). 
-
-Load migration, back-up
-scheduling, fine-grained power management and thermal management were of medium
-interest and impact. Lighting control and back-up resources were of low
-interest and impact. 
 %Patki: Fig 2
 \begin{figure}
 \begin{center}
@@ -233,6 +222,18 @@ interest and impact.
 \label{figPUE}
 \end{center}
 \end{figure}
+
+We tried to evaluate if power management strategies will be considered
+relevant and effective for grid integration at some point in the future. Two
+questions were asked: is there interest in using the strategies and what
+impact did they think that the strategies would have? When combining
+interest and impact, the results showed that power capping, shutdown, and
+job scheduling were both potentially interesting and of high impact (see Table \ref{tab3}). 
+
+Load migration, back-up
+scheduling, fine-grained power management and thermal management were of medium
+interest and impact. Lighting control and back-up resources were of low
+interest and impact. 
 
 Temperature control and lighting management are utilized as strategies, but considered medium to low interest and impact
 for responding to requests from ESPs. 
