--- a/text/questionnaire.tex
+++ b/text/questionnaire.tex
@@ -6,7 +6,7 @@ correlated and driven by energy policies in the country.
 
 Nineteen Top100 List sized sites in the United States were targeted for the
 questionnaire. Eleven sites responded---Oak Ridge National Laboratory (ORNL), 
-Lawrence Livermore National Laboratory (LLNL), 
+Lawrence Livermore National Laboratory, 
 Argonne National Laboratory (ANL), 
 Los Alamos National Laboratory (LANL), 
 Lawrence Berkeley National Laboratory (LBNL), 
